Added several books & fixed some fonts

--- a/foreign-literature.html
+++ b/foreign-literature.html
@@ -40,14 +40,14 @@
 
         <section id="book-list" class="container">
             <div class="book-list-frame">
-                <a href="https://www.aozora.gr.jp/cards/001094/card42606.html" target="_blank">
+                <a href="https://www.iwanami.co.jp/book/b247928.html" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/les_misérables.jpg" class="book-list-img" alt="レ・ミゼラブル">
                         <div class="book-list-info">
                             <h2 class="book-list-info-title">レ・ミゼラブル</h2>
                             <h4 class="book-list-info-writer">作: ヴィクトル・ユーゴー / 訳: 豊島与志雄</h4>
                             <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐</h4>
-                            <div class="book-list-info-link"><object><a href="#" target="_blank" class="book-list-info-link-aozora">青空文庫</a></object></div>
+                            <div class="book-list-info-link"><object><a href="https://www.aozora.gr.jp/cards/001094/card42606.html" target="_blank" class="book-list-info-link-aozora">青空文庫</a></object></div>
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">理想主義で貫かれた、「愛」の物語</h3>
                                 <p class="book-list-info-description-sentence">　ひとりの徒刑囚が聖人として生涯を終えるまでの怒涛の人生を描いた、魂が震える物語である。善悪とは何か、人はどう生きるべきか。道徳や倫理について、改めて考えるきっかけを与えてくれる作品である。岩波文庫全4巻の超大作だ。</p>
@@ -59,13 +59,14 @@
             </div>
 
             <div class="book-list-frame">
-                <a href="https://www.aozora.gr.jp/cards/000363/card56656.html">
+                <a href="https://www.iwanami.co.jp/book/b248196.html" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/tsumi-to-batsu.jpg" class="book-list-img" alt="罪と罰">
                         <div class="book-list-info">
                             <h2 class="book-list-info-title">罪と罰</h2>
                             <h4 class="book-list-info-writer">作: ドストエフスキー / 訳: 江川卓</h4>
                             <h4 class="book-list-info-difficulty">読み易さ: ⭐</h4>
+                            <div class="book-list-info-link"><object><a href="https://www.aozora.gr.jp/cards/000363/card56656.html" target="_blank" class="book-list-info-link-aozora">青空文庫</a></object></div>
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">倫理、思想、心理、幅広いテーマを包含する「現代の預言書」</h3>
                                 <p class="book-list-info-description-sentence">　ドストエフスキーの真骨頂である、人間の精神性、心理を深く穿った作品である。多くのテーマを包含する上、哲学性の高い小説であるため、極めて難解ではあるが、非常に読みごたえがある。長編小説における世界的な名作。</p>
@@ -77,13 +78,14 @@
             </div>
 
             <div class="book-list-frame">
-                <a href="https://www.aozora.gr.jp/cards/001847/card57347.html">
+                <a href="https://www.shinchosha.co.jp/book/210018/" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/the-oldman-and-the-sea.jpg" class="book-list-img" alt="老人と海">
                         <div class="book-list-info">
                             <h2 class="book-list-info-title">老人と海</h2>
                             <h4 class="book-list-info-writer">作: ヘミングウェイ / 訳: 高見浩</h4>
                             <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐⭐⭐</h4>
+                            <div class="book-list-info-link"><object><a href="https://www.aozora.gr.jp/cards/001847/card57347.html" target="_blank" class="book-list-info-link-aozora">青空文庫</a></object></div>
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">老人と巨大な魚との死闘を描いた、人間の尊厳と悲劇の物語</h3>
                                 <p class="book-list-info-description-sentence">　非常にシンプルな文体と構成が特徴的である。「映像」で魅せる映画があるように、本作は「文章」で魅せる文学であり、言語が本来持つ魅力を味わうことの出来る作品だ。作品発表当時、ヘミングウェイの浮気に愛想をつかしていた妻は、本作を読んで「これなら、あなたの仕打ちを許してもいい」と言ったそうだ。</p>
@@ -95,16 +97,55 @@
             </div>
 
             <div class="book-list-frame">
-                <a href="https://www.aozora.gr.jp/cards/001025/card50909.html">
+                <a href="https://www.iwanami.co.jp/book/b247629.html" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/faust.jpg" class="book-list-img" alt="ファウスト">
                         <div class="book-list-info">
                             <h2 class="book-list-info-title">ファウスト</h2>
                             <h4 class="book-list-info-writer">作: ゲーテ / 訳: 相良守峯</h4>
                             <h4 class="book-list-info-difficulty">読み易さ: ⭐</h4>
+                            <div class="book-list-info-link"><object><a href="https://www.aozora.gr.jp/cards/001025/card50909.html" target="_blank" class="book-list-info-link-aozora">青空文庫</a></object></div>
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">詩人の天才ゲーテが、その一生を掛けて完成させた大作</h3>
                                 <p class="book-list-info-description-sentence">　戯曲形式で書かれた悲劇の物語である。学問に絶望した大学者ファウストが、生の意義を得るため悪魔メフィストと契約し、メフィストはファウストを誘惑していく。非常に難解ではあるが、人間の真の生き方とは何か、大文豪ゲーテがその思想を傾けつくした大作である。</p>
+                            </div>
+                            <p class="book-list-info-copy">書影: 岩波書店</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            
+            <div class="book-list-frame">
+                <a href="https://www.iwanami.co.jp/book/b248159.html" target="_blank">
+                    <div class="book-list-content">
+                        <img src="images/books/the-overcoat.jpg" class="book-list-img" alt="外套">
+                        <div class="book-list-info">
+                            <h2 class="book-list-info-title">外套</h2>
+                            <h4 class="book-list-info-writer">作: ゴーゴリ / 訳: 平井 肇</h4>
+                            <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐⭐</h4>
+                            <div class="book-list-info-link"><object><a href="https://www.aozora.gr.jp/cards/000207/card357.html" target="_blank" class="book-list-info-link-aozora">青空文庫</a></object></div>
+                            <div class="book-list-info-description">
+                                <h3 class="book-list-info-description-headline">ロシア文学最大の傑作「我々は皆ゴーゴリの『外套』から生まれたのだ」</h3>
+                                <p class="book-list-info-description-sentence">　近代ロシア文学の先駆けとなった作品。ひとりの貧しい下級官吏が、運命と人に打ち砕かれる様子を描いた物語だ。貧しい人の行為と人間や社会の持つ「傷」について、独特の筆致で描かれている。</p>
+                            </div>
+                            <p class="book-list-info-copy">書影: 岩波書店</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="book-list-frame">
+                <a href="https://www.iwanami.co.jp/book/b248208.html" target="_blank">
+                    <div class="book-list-content">
+                        <img src="images/books/the-brothers-karamazov.jpg" class="book-list-img" alt="カラマーゾフの兄弟">
+                        <div class="book-list-info">
+                            <h2 class="book-list-info-title">カラマーゾフの兄弟</h2>
+                            <h4 class="book-list-info-writer">作: ドストエフスキー / 訳: 米川 正夫</h4>
+                            <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐</h4>
+                            <div class="book-list-info-link"><object><a href="https://www.aozora.gr.jp/cards/000363/card42286.html" target="_blank" class="book-list-info-link-aozora">青空文庫</a></object></div>
+                            <div class="book-list-info-description">
+                                <h3 class="book-list-info-description-headline">あらゆるテーマを包含した、長編作品の最高傑作</h3>
+                                <p class="book-list-info-description-sentence">　作者最後の作品であり、雄大な構想をもって書かれた。人間の精神、信仰、苦悩、貧困など、幅広いテーマを包含し、複雑かつ緻密な構成を持つ。作者は続編を構想していたらしいが、20世紀の日本を代表する文芸評論家の小林秀雄は「およそ続編というようなものがまったく考えられぬほど完璧な作品」と評している。</p>
                             </div>
                             <p class="book-list-info-copy">書影: 岩波書店</p>
                         </div>
