Add color & gingatetsudou-no-yoru

--- a/foreign-literature.html
+++ b/foreign-literature.html
@@ -41,7 +41,7 @@
         <section id="book-list" class="container">
             <div class="book-list-frame">
                 <a href="https://www.iwanami.co.jp/book/b247928.html" target="_blank">
-                    <div class="book-list-content">
+                    <div class="book-list-content" id="les_misérables">
                         <img src="images/books/les_misérables.jpg" class="book-list-img" alt="レ・ミゼラブル">
                         <div class="book-list-info">
                             <h2 class="book-list-info-title">レ・ミゼラブル</h2>
@@ -58,7 +58,7 @@
                 </a>
             </div>
 
-            <div class="book-list-frame">
+            <div class="book-list-frame" id="tsumi-to-batsu">
                 <a href="https://www.iwanami.co.jp/book/b248196.html" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/tsumi-to-batsu.jpg" class="book-list-img" alt="罪と罰">
@@ -77,7 +77,7 @@
                 </a>
             </div>
 
-            <div class="book-list-frame">
+            <div class="book-list-frame" id="the-oldman-and-the-sea">
                 <a href="https://www.shinchosha.co.jp/book/210018/" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/the-oldman-and-the-sea.jpg" class="book-list-img" alt="老人と海">
@@ -96,7 +96,7 @@
                 </a>
             </div>
 
-            <div class="book-list-frame">
+            <div class="book-list-frame" id="faust">
                 <a href="https://www.iwanami.co.jp/book/b247629.html" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/faust.jpg" class="book-list-img" alt="ファウスト">
@@ -115,9 +115,9 @@
                 </a>
             </div>
             
-            <div class="book-list-frame">
+            <div class="book-list-frame" id="the-overcoat">
                 <a href="https://www.iwanami.co.jp/book/b248159.html" target="_blank">
-                    <div class="book-list-content">
+                    <div class="book-list-content" id="the-overcoat">
                         <img src="images/books/the-overcoat.jpg" class="book-list-img" alt="外套">
                         <div class="book-list-info">
                             <h2 class="book-list-info-title">外套</h2>
@@ -134,7 +134,7 @@
                 </a>
             </div>
 
-            <div class="book-list-frame">
+            <div class="book-list-frame" id="the-brothers-karamazov">
                 <a href="https://www.iwanami.co.jp/book/b248208.html" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/the-brothers-karamazov.jpg" class="book-list-img" alt="カラマーゾフの兄弟">
