--- a/japanese-literature.html
+++ b/japanese-literature.html
@@ -39,7 +39,7 @@
         <h1 class="book-list-genre">日本文学</h1>
 
         <section id="book-list" class="container">
-            <div class="book-list-frame">
+            <div class="book-list-frame" id="shukke-to-sonodeshi">
                 <a href="https://www.iwanami.co.jp/book/b249269.html" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/shukke-to-sonodeshi.jpg" class="book-list-img" alt="出家とその弟子">
@@ -58,7 +58,7 @@
                 </a>
             </div>
 
-            <div class="book-list-frame">
+            <div class="book-list-frame" id="gin-no-saji">
                 <a href="https://www.iwanami.co.jp/book/b249200.html" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/gin-no-saji.jpg" class="book-list-img" alt="銀の匙">
@@ -77,7 +77,7 @@
                 </a>
             </div>
 
-            <div class="book-list-frame">
+            <div class="book-list-frame" id="yashagaike">
                 <a href="https://www.iwanami.co.jp/book/b249089.html" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/yashagaike.jpg" class="book-list-img" alt="夜叉ヶ池">
@@ -96,7 +96,7 @@
                 </a>
             </div>
 
-            <div class="book-list-frame">
+            <div class="book-list-frame" id="kusamakura">
                 <a href="https://www.iwanami.co.jp/book/b248806.html" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/kusamakura.jpg" class="book-list-img" alt="草枕">
@@ -115,7 +115,7 @@
                 </a>
             </div>
             
-            <div class="book-list-frame">
+            <div class="book-list-frame" id="kaidan-botandourou">
                 <a href="https://www.iwanami.co.jp/book/b249108.html" target="_blank">
                     <div class="book-list-content">
                         <img src="images/books/kaidan-botandourou.jpg" class="book-list-img" alt="怪談牡丹燈籠">
@@ -127,6 +127,25 @@
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">多くの事件や登場人物が複雑に絡み合う、壮大なドラマ</h3>
                                 <p class="book-list-info-description-sentence">　大名人の落語家、三遊亭圓朝により口演された怪談話である。単なる幽霊話ではなく、仇討ちや殺人、母子再開など、多くの出来事が絡み合うドラマとなっている。幽霊より恐ろしい、人間の業が描かれている。</p>
+                            </div>
+                            <p class="book-list-info-copy">書影: 岩波書店</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="book-list-frame" id="gingatetsudou-no-yoru">
+                <a href="https://www.iwanami.co.jp/book/b249307.html" target="_blank">
+                    <div class="book-list-content">
+                        <img src="images/books/gingatetsudou-no-yoru.jpg" class="book-list-img" alt="銀河鉄道の夜">
+                        <div class="book-list-info">
+                            <h2 class="book-list-info-title">銀河鉄道の夜</h2>
+                            <h4 class="book-list-info-writer">作: 宮沢賢治</h4>
+                            <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐⭐⭐</h4>
+                            <div class="book-list-info-link"><object><a href="https://www.aozora.gr.jp/cards/000081/card456.html" target="_blank" class="book-list-info-link-aozora">青空文庫</a></object></div>
+                            <div class="book-list-info-description">
+                                <h3 class="book-list-info-description-headline">言わずと知れた、日本を代表する童話作品</h3>
+                                <p class="book-list-info-description-sentence">　孤独な少年ジョバンニが、友人カムパネルラと銀河鉄道の旅をする物語。作者の独創的な世界観、夢と現実が交錯する幻想世界を描き出す表現力が遺憾なく発揮された、宮沢童話の最高傑作である。</p>
                             </div>
                             <p class="book-list-info-copy">書影: 岩波書店</p>
                         </div>
