Add what-man-live-by and toshishun

--- a/japanese-literature.html
+++ b/japanese-literature.html
@@ -152,6 +152,25 @@
                     </div>
                 </a>
             </div>
+
+            <div class="book-list-frame" id="toshishun">
+                <a href="https://www.iwanami.co.jp/book/b249288.html" target="_blank">
+                    <div class="book-list-content">
+                        <img src="images/books/toshishun.jpg" class="book-list-img" alt="杜子春">
+                        <div class="book-list-info">
+                            <h2 class="book-list-info-title">杜子春</h2>
+                            <h4 class="book-list-info-writer">作: 芥川 龍之介</h4>
+                            <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐⭐</h4>
+                            <div class="book-list-info-link"><object><a href="https://www.aozora.gr.jp/cards/000879/card43015.html" target="_blank" class="book-list-info-link-aozora">青空文庫</a></object></div>
+                            <div class="book-list-info-description">
+                                <h3 class="book-list-info-description-headline">短編の天才、芥川龍之介による中国の小説に基づく童話</h3>
+                                <p class="book-list-info-description-sentence">　自堕落な青年、杜子春が仙人と出会い、杜子春は仙術を手に入れるために試練を受ける物語。中国の古典を参考に書かれた作品だが、芥川は結末を原作とは大きく改変した。芥川らしい簡潔な筆致で読みやすい。</p>
+                            </div>
+                            <p class="book-list-info-copy">書影: 岩波書店</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </section>
         
         <!-- footer -->
