--- a/other-books.html
+++ b/other-books.html
@@ -39,24 +39,46 @@
         <h1 class="book-list-genre">その他作品</h1>
 
         <h3 class="introduction-content">
-            ここでは番外編として、管理人のお気に入りの作品を紹介する。
+            ここでは番外編として、管理人のお気に入りの本を紹介する。
         </h3>
 
         <section id="book-list" class="container">
-            <div class="book-list-frame">
-                <a href="https://www.aozora.gr.jp/cards/000256/card1412.html" target="_blank">
+            <div class="book-list-frame" id="ningen-no-kensetsu">
+                <a href="https://www.shinchosha.co.jp/book/100708/" target="_blank">
                     <div class="book-list-content">
-                        <img src="images/books/shukke-to-sonodeshi.jpg" class="book-list-img" alt="出家とその弟子">
+                        <img src="images/books/ningen-no-kensetsu.jpg" class="book-list-img" alt="人間の建設">
                         <div class="book-list-info">
-                            <h2 class="book-list-info-title">出家とその弟子</h2>
-                            <h4 class="book-list-info-writer">作: 倉田百三</h4>
-                            <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐⭐</h4>
-                            <div class="book-list-info-link"><object><a href="#" target="_blank" class="book-list-info-link-aozora">青空文庫</a></object></div>
+                            <h2 class="book-list-info-title">人間の建設</h2>
+                            <h4 class="book-list-info-writer">作: 小林秀雄 , 岡潔</h4>
+                            <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐⭐</h4>
                             <div class="book-list-info-description">
-                                <h3 class="book-list-info-description-headline">歎異抄の教えを戯曲化した、日本の宗教文学の傑作</h3>
-                                <p class="book-list-info-description-sentence">　浄土真宗の開祖「親鸞」を主人公とし、人間が持つ煩悩や罪業と信仰との葛藤を題材としている。ヒューマニズムで一貫された、純粋な作品。発表直後、当時の青年らに熱狂的に支持され、大ベストセラーになった。明解なストーリーで読みやすい。</p>
+                                <h3 class="book-list-info-description-headline">文系、理系の歴史的天才同士による対談</h3>
+                                <p class="book-list-info-description-sentence">
+                                    　「文芸批評の神様」小林秀夫、「ガチ天才エキセントリック数学者」岡潔。文系、理系の最高の頭脳が邂逅する。学問、芸術、文学、数学などについて論じられている。話の内容はきわめて主観的、感覚的なものが多いが、あらゆる言葉が示唆に富んでおり、物事の本質について改めて考えるきっかけを与えてくれる一冊だ。ただ、結構マイナーなトピック（本居宣長、ドストエフスキーなど）も扱われているので、そこは注意されたい。
+                                </p>
                             </div>
-                            <p class="book-list-info-copy">書影: 岩波書店</p>
+                            <p class="book-list-info-copy">小林秀雄/著, 岡潔/著, 『人間の建設』（新潮文庫刊）</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="book-list-frame" id="notes-from-underground">
+                <a href="https://www.shinchosha.co.jp/book/201009/" target="_blank">
+                    <div class="book-list-content">
+                        <img src="images/books/notes-from-underground.jpg" class="book-list-img" alt="地下室の手記">
+                        <div class="book-list-info">
+                            <h2 class="book-list-info-title">地下室の手記</h2>
+                            <h4 class="book-list-info-writer">作: ドストエフスキー / 訳: 江川卓</h4>
+                            <h4 class="book-list-info-difficulty">読み易さ: ⭐⭐</h4>
+                            <div class="book-list-info-link"><object><a href="https://www.aozora.gr.jp/cards/000363/card57393.html" target="_blank" class="book-list-info-link-aozora">青空文庫</a></object></div>
+                            <div class="book-list-info-description">
+                                <h3 class="book-list-info-description-headline">人間の持つ醜い性質、本性を描き出した黒い哲学書</h3>
+                                <p class="book-list-info-description-sentence">
+                                    　この作品は「海外文学」のコーナーで紹介したかったのだが、あまりにも毒が強いため断念した。社会的に孤立した語り手によるモノローグ形式で物語は進行し、人間の非合理性について語られる。人間の理性による行動規定を否定し、功利主義的な社会哲学の根底にある合理主義的な仮定を否定されている。ただ、作品の思想、イコール作者の思想として捉えるのではなく、あくまで作者が社会で蔓延する特定の性格について書き表したものとして読んでいくと良いだろう。
+                                </p>
+                            </div>
+                            <p class="book-list-info-copy">ドストエフスキー/著, 江川卓/訳, 『地下室の手記』（新潮文庫刊）</p>
                         </div>
                     </div>
                 </a>
