Add fine adjustment

--- a/other-books.html
+++ b/other-books.html
@@ -54,7 +54,7 @@
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">文系、理系の歴史的天才同士による対談</h3>
                                 <p class="book-list-info-description-sentence">
-                                    　「文芸批評の神様」小林秀夫、「ガチ天才エキセントリック数学者」岡潔。文系、理系の最高の頭脳が邂逅する。学問、芸術、文学、数学などについて論じられている。話の内容はきわめて主観的、感覚的なものが多いが、あらゆる言葉が示唆に富んでおり、物事の本質について改めて考えるきっかけを与えてくれる一冊だ。ただ、結構マイナーなトピック（本居宣長、ドストエフスキーなど）も扱われているので、そこは注意されたい。
+                                    　「文芸批評の神様」小林秀夫、「ガチ天才エキセントリック数学者」岡潔。文系、理系の最高の頭脳が邂逅する。おもに学問、芸術、文学、数学などについて論じられている。話の内容は主観的、感覚的なものが多いが、あらゆる言葉が示唆に富んでおり、物事の本質について改めて考えるきっかけを与えてくれる。ただ、結構マイナーなトピック（本居宣長、ドストエフスキーなど）も扱われているので、そこは注意されたい。
                                 </p>
                             </div>
                             <p class="book-list-info-copy">小林秀雄/著, 岡潔/著, 『人間の建設』（新潮文庫刊）</p>
@@ -75,7 +75,7 @@
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">人間の持つ醜い性質、本性を描き出した黒い哲学書</h3>
                                 <p class="book-list-info-description-sentence">
-                                    　この作品は「海外文学」のコーナーで紹介したかったのだが、あまりにも毒が強いため断念した。社会的に孤立した語り手によるモノローグ形式で物語は進行し、人間の非合理性について語られる。人間の理性による行動規定を否定し、功利主義的な社会哲学の根底にある合理主義的な仮定を否定されている。ただ、作品の思想、イコール作者の思想として捉えるのではなく、あくまで作者が社会で蔓延する特定の性格について書き表したものとして読んでいくと良いだろう。
+                                    　この作品は「海外文学」のコーナーで紹介したかったのだが、あまりにも毒が強いため断念した。社会的に孤立した語り手によるモノローグ形式で物語は進行し、人間の非合理性について語られる。人間の理性による行動規定を否定し、功利主義的な社会哲学の根底にある合理主義的な仮定を否定している。ただ、作品の思想、イコール作者の思想として捉えるのではなく、あくまで作者が社会で蔓延する特定の性格について書き表したものとして読んでいくと良いだろう。
                                 </p>
                             </div>
                             <p class="book-list-info-copy">ドストエフスキー/著, 江川卓/訳, 『地下室の手記』（新潮文庫刊）</p>
