Add fine adjustment

--- a/foreign-literature.html
+++ b/foreign-literature.html
@@ -128,7 +128,7 @@
                             <div class="book-list-info-description">
                                 <h3 class="book-list-info-description-headline">詩人の天才ゲーテが、その一生を掛けて完成させた大作</h3>
                                 <p class="book-list-info-description-sentence">
-                                    　戯曲形式で書かれた悲劇の物語である。学問に絶望した大学者ファウストが、生の意義を得るため悪魔メフィストと契約し、メフィストはファウストを誘惑していく。非常に難解ではあるが、人間の真の生き方とは何か、大文豪ゲーテがその思想を傾けつくした大作である。
+                                    　戯曲形式で書かれた悲劇の物語である。学問に絶望した大学者ファウストが、生の意義を得るため悪魔メフィストと契約し、メフィストはファウストを誘惑していく。人間の真の生き方とは何か、大文豪ゲーテがその思想を傾けつくした大作である。非常に難解。
                                 </p>
                             </div>
                             <p class="book-list-info-copy">書影: 岩波書店</p>
