--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </a>
                 </div>
                 <div class="items">
-                    <a href="foreign-literature.html#gin-no-saji">
+                    <a href="japanese-literature.html#gin-no-saji">
                         <img src="images/books/gin-no-saji.jpg" alt="銀の匙">
                         <div class="items-description">
                             <h2 class="items-description-title">銀の匙</h2>
@@ -126,7 +126,7 @@
                     </a>
                 </div>
                 <div class="items">
-                    <a href="foreign-literature.html#kaidan-botandourou">
+                    <a href="japanese-literature.html#kaidan-botandourou">
                         <img src="images/books/kaidan-botandourou.jpg" alt="怪談牡丹燈籠">
                         <div class="items-description">
                             <h2 class="items-description-title">怪談牡丹燈籠</h2>
@@ -135,7 +135,7 @@
                     </a>
                 </div>
                 <div class="items">
-                    <a href="foreign-literature.html#kusamakura">
+                    <a href="japanese-literature.html#kusamakura">
                         <img src="images/books/kusamakura.jpg" alt="草枕">
                         <div class="items-description">
                             <h2 class="items-description-title">草枕</h2>
