Made fine adjustment

--- a/index.html
+++ b/index.html
@@ -54,10 +54,15 @@
                 文学と名の付くものは古今東西、山のようにありますが、ここではおよそ名作として知られているような、誰が読んでもきっと満足できるであろう作品を中心に紹介しています。
                 <br>
                 <br>
-                人は誰もが、人生に対する「問い」を抱いていると思います。文学作品は、その「問い」の自分なりの答えを見つける上での思考の触媒になるでしょう。
+                人は誰もが、人生に対する「問い」を抱いていると思います。文学作品は、その「問い」の自分なりの答えを見つけるための思考の触媒になるでしょう。
                 <br>
                 文学には中々ヘビーな作品も多いですが、どの作品も作者の生、労作の記録であり贈り物です。読めば、何かしら得るものはあると思います。
-                <br>     
+                <br>
+                <br>
+                作品一覧は上部ナビゲーションから御覧頂けます。基本的には青空文庫へのリンクが貼ってあるので、気になった作品をその場で読むことができます。
+                <br>
+                「その他作品」では番外編として、管理人のお気に入りの本を紹介しています。
+                <br>
                 <br>           
                 このサイトが、あなたの本選びの役に立てますと幸いです。
             </h3>
