Made fine adjustment

--- a/other-books.html
+++ b/other-books.html
@@ -39,7 +39,7 @@
         <h1 class="book-list-genre">その他作品</h1>
 
         <h3 class="introduction-content">
-            ここでは番外編として、管理人のお気に入りの本を紹介する。
+            ここでは番外編として、管理人のお気に入りの本を紹介します。
         </h3>
 
         <section id="book-list" class="container">
